--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,17 @@ build
 out
 *.db
 .vs/Sprite_sheet_cutter_app/v17/Browse.VC.db
+*.sqlite
+.vs/slnx.sqlite
+.vs/slnx.sqlite-journal
+.vs/Sprite_sheet_cutter_app/CopilotIndices/17.14.734.62261/CodeChunks.db-shm
+.vs/Sprite_sheet_cutter_app/CopilotIndices/17.14.734.62261/CodeChunks.db-wal
+.vs/Sprite_sheet_cutter_app/CopilotIndices/17.14.734.62261/SemanticSymbols.db-shm
+.vs/Sprite_sheet_cutter_app/CopilotIndices/17.14.734.62261/SemanticSymbols.db-wal
+.vs/Sprite_sheet_cutter_app/FileContentIndex/640fccee-e25f-4452-ba44-a16392018bc7.vsidx
+.vs/Sprite_sheet_cutter_app/v17/Browse.VC.db-shm
+.vs/Sprite_sheet_cutter_app/v17/Browse.VC.db-wal
+.vs/Sprite_sheet_cutter_app/v17/Browse.VC.opendb
+.vs/Sprite_sheet_cutter_app/v17/ipch/AutoPCH/7b8c1957487c97c2/SPRITESHEETCUTTERAPP.ipch
+.vs/Sprite_sheet_cutter_app/v17/ipch/AutoPCH/eed6948fc15a0797/SPRITESHEETCUTTERAPP.ipch
+*.vsidx
